--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Ooohabite Blog
 SEOTitle: 嗷呜一口一个世界的博客 | Ooohabite Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
-description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+description: "这里是 @aowuyikouyigexiaogege 的个人博客，与你一起发现更大的世界 | 励志做大神的🥬"
+keyword: "鬼栈, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
 url: "https://huangxuan.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
